--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Mari0ch/appi/issues"
   },
-  "homepage": "https://github.com/Mari0ch/appi#readme"
+  "homepage": "https://github.com/Mari0ch/appi#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13"
+  }
 }
