--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/Mari0ch/appi#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^6.0.9",
     "nodemon": "^2.0.13"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
